Izmena prijava metode

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
-#Thu May 29 19:14:21 CEST 2025
+#Sun Jun 01 20:55:04 CEST 2025
 excel.file.path=D\:\\ExportPodaciDemo.xlsx
-password=
+password=admin
 port=9000
-url=jdbc\:mysql\://localhost\:3306/ps_seminarski
-username=andrej
+url=jdbc\:mysql\://localhost\:3306/prosoft_andrej
+username=root
