--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,39 +36,39 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/00_ProSoft_Server
 endorsed.classpath=
 excludes=
-file.reference.00_ProSoft_Common.jar=/home/andrej-maksimovic/NetBeansProjects/00_ProSoft_Common/dist/00_ProSoft_Common.jar
-file.reference.commons-collections4-4.5.0-M3.jar=/home/andrej-maksimovic/Downloads/commons-collections4-4.5.0-M3.jar
-file.reference.commons-compress-1.27.1.jar=/home/andrej-maksimovic/Downloads/commons-compress-1.27.1.jar
-file.reference.commons-io-2.18.0.jar=/home/andrej-maksimovic/Downloads/commons-io-2.18.0.jar
-file.reference.commons-logging-1.2.jar=/home/andrej-maksimovic/Downloads/commons-logging-1.2.jar
-file.reference.flatlaf-3.6.jar=/home/andrej-maksimovic/Downloads/flatlaf-3.6.jar
-file.reference.javax.activation.jar=/home/andrej-maksimovic/Downloads/javax.activation.jar
-file.reference.javax.mail.jar=/home/andrej-maksimovic/Downloads/javax.mail.jar
-file.reference.log4j-api-2.24.0.jar=/home/andrej-maksimovic/Downloads/log4j-api-2.24.0.jar
-file.reference.log4j-core-2.24.0.jar=/home/andrej-maksimovic/Downloads/log4j-core-2.24.0.jar
-file.reference.mysql-connector-j-9.3.0.jar=/home/andrej-maksimovic/Downloads/mysql-connector-j-9.3.0.jar
-file.reference.poi-5.4.0.jar=/home/andrej-maksimovic/Downloads/poi-5.4.0.jar
-file.reference.poi-ooxml-5.2.1.jar=/home/andrej-maksimovic/Downloads/poi-ooxml-5.2.1.jar
-file.reference.poi-ooxml-5.4.0.jar=/home/andrej-maksimovic/Downloads/poi-ooxml-5.4.0.jar
-file.reference.xmlbeans-5.3.0.jar=/home/andrej-maksimovic/Downloads/xmlbeans-5.3.0.jar
+file.reference.00_ProSoft_Common.jar=C:\\Users\\Korisnik\\Documents\\NetBeansProjects\\ANDREJ\\00_ProSoft_Common\\dist\\00_ProSoft_Common.jar
+file.reference.activation-1.1.1.jar=C:\\Users\\Korisnik\\Downloads\\activation-1.1.1.jar
+file.reference.commons-collections4-4.5.0-M1.jar=C:\\Users\\Korisnik\\Downloads\\commons-collections4-4.5.0-M1.jar
+file.reference.commons-compress-1.27.1.jar=C:\\Users\\Korisnik\\Downloads\\commons-compress-1.27.1.jar
+file.reference.commons-io-2.18.0.jar=C:\\Users\\Korisnik\\Downloads\\commons-io-2.18.0.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Korisnik\\Downloads\\commons-logging-1.2.jar
+file.reference.flatlaf-3.3.jar=C:\\Users\\Korisnik\\Downloads\\flatlaf-3.3.jar
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\Korisnik\\Downloads\\javax.mail-1.6.2.jar
+file.reference.jfreechart-1.5.3.jar=C:\\Users\\Korisnik\\Downloads\\jfreechart-1.5.3.jar
+file.reference.log4j-api-2.24.3.jar=C:\\Users\\Korisnik\\Downloads\\log4j-api-2.24.3.jar
+file.reference.log4j-core-2.24.3.jar=C:\\Users\\Korisnik\\Downloads\\log4j-core-2.24.3.jar
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\Korisnik\\Downloads\\mysql-connector-j-9.1.0.jar
+file.reference.poi-5.4.0.jar=C:\\Users\\Korisnik\\Downloads\\poi-5.4.0.jar
+file.reference.poi-ooxml-5.4.0__1_.jar=C:\\Users\\Korisnik\\Downloads\\poi-ooxml-5.4.0 (1).jar
+file.reference.xmlbeans-5.3.0.jar=C:\\Users\\Korisnik\\Downloads\\xmlbeans-5.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-collections4-4.5.0-M3.jar}:\
+    ${file.reference.00_ProSoft_Common.jar}:\
+    ${file.reference.poi-5.4.0.jar}:\
+    ${file.reference.commons-collections4-4.5.0-M1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
     ${file.reference.commons-compress-1.27.1.jar}:\
     ${file.reference.commons-io-2.18.0.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.flatlaf-3.6.jar}:\
-    ${file.reference.javax.activation.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.log4j-api-2.24.0.jar}:\
-    ${file.reference.log4j-core-2.24.0.jar}:\
-    ${file.reference.poi-5.4.0.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.poi-ooxml-5.2.1.jar}:\
-    ${file.reference.poi-ooxml-5.4.0.jar}:\
-    ${file.reference.xmlbeans-5.3.0.jar}:\
-    ${file.reference.00_ProSoft_Common.jar}
+    ${file.reference.flatlaf-3.3.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.jfreechart-1.5.3.jar}:\
+    ${file.reference.log4j-api-2.24.3.jar}:\
+    ${file.reference.log4j-core-2.24.3.jar}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.poi-ooxml-5.4.0__1_.jar}:\
+    ${file.reference.xmlbeans-5.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
