--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/andrej-maksimovic/snap/netbeans/132/build.properties
+user.properties.file=C:\\Users\\Korisnik\\AppData\\Roaming\\NetBeans\\23\\build.properties
